crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_binary_client.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

import httpx


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def download(self, id: str) -> bytes:
        response = await self.client.get(f"{self.base_url}/api/doc/{id}")
        response.raise_for_status()
        return response.content
