crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_binary_handler.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol


class Handlers(Protocol):
    async def download(self, id: str) -> bytes: ...
