crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_binary_models.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations
