crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_binary_server.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter, Response

from .handlers import Handlers


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.get("/api/doc/{id}")
    async def download(id: str) -> Response:
        data = await handlers.download(id=id)
        return Response(content=data, media_type="application/octet-stream")

    return router
