crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_bool_string_defaults_client.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

from typing import Any

import httpx

from .models import Item


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def list_items(
        self,
        *,
        sort_by: str = "name",
        ascending: bool = True,
        limit: int = 50,
    ) -> list[Item]:
        params: dict[str, Any] = {}
        if sort_by is not None:
            params["sortBy"] = sort_by
        if ascending is not None:
            params["ascending"] = ascending
        if limit is not None:
            params["limit"] = limit
        response = await self.client.get(f"{self.base_url}/api/items", params=params)
        response.raise_for_status()
        return [Item(**item) for item in response.json()]
