crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_bool_string_defaults_server.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter, Query

from .handlers import Handlers
from .models import Item


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.get("/api/items")
    async def list_items(
        sort_by: str = Query("name", alias="sortBy"),
        ascending: bool = True,
        limit: int = 50,
    ) -> list[Item]:
        return await handlers.list_items(
            sort_by=sort_by, ascending=ascending, limit=limit
        )

    return router
