crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_cursor_pagination_handlers.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol

from .models import ListPostsPage


class Handlers(Protocol):
    async def list_posts(
        self,
        *,
        cursor: str | None = None,
        limit: int,
    ) -> ListPostsPage: ...
