crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_cursor_pagination_server.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter

from .handlers import Handlers
from .models import ListPostsPage


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.get("/api/posts")
    async def list_posts(limit: int, cursor: str | None = None) -> ListPostsPage:
        return await handlers.list_posts(cursor=cursor, limit=limit)

    return router
