crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_enum_response_client.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

import httpx

from .models import Status


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def get_status(self) -> Status:
        response = await self.client.get(f"{self.base_url}/api/status")
        response.raise_for_status()
        return Status(**response.json())
