crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_float_constraints.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from pydantic import BaseModel, Field


class Measurement(BaseModel):
    value: float = Field(..., ge=0.0, le=100.5)
